Java 11 compatibility (needs a local build of gtnhmixins until the pr gets merged)